feat(boxes): add boxes management
